# mpl

./: .gitignore  LICENSE  README.md  config.py  database.db  db.sql  go.py  pyproject.toml  requirements  requirements.txt  theme_example.py  util.py
mpl/: __init__.py  database.db  other.py  player.py  ui.py  uinp.py
mpl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mpl/helpers/: spotify_helper.py  utilmenu.py  youtube_helper.py
