[tool.poetry]
name = "mpl"
version = "0.1.0"
description = "A CLI music player"
authors = ["Serbirial"]

[tool.poetry.dependencies]
python = "^3.5"
python-vlc = "=3.0.4106"
psutil = "^5.6"
click = "^7.0"
colorama = "^0.4.1"
librosa = "^0.6.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mpl = 'mpl:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

